--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div id="main-content" class="container">
    
-<h1> Our menu</h1>
+<h1 class="text-center"> Our menu</h1>
     <div class="row">
       <section class="col-lg-4 col-md-6">
         <h2 class="chicken"><a name="Chicken"></a>Chicken</h2>
